// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormTextInput renders correctly with error 1`] = `

<label class="govuk-label"
       for="test-input"
>
  Test input
</label>
<span class="govuk-error-message"
      id="test-input-error"
>
  Field is required
</span>
<input aria-describedby="test-input-error"
       type="text"
       class="govuk-input"
       id="test-input"
       name="testInput"
       value
>

`;

exports[`FormTextInput renders correctly with hint 1`] = `

<label class="govuk-label"
       for="test-input"
>
  Test input
</label>
<span id="test-input-hint"
      class="govuk-hint"
>
  Fill me in
</span>
<input aria-describedby="test-input-hint"
       type="text"
       class="govuk-input"
       id="test-input"
       name="testInput"
       value
>

`;

exports[`FormTextInput renders correctly with required props 1`] = `

<label class="govuk-label"
       for="test-input"
>
  Test input
</label>
<input type="text"
       class="govuk-input"
       id="test-input"
       name="testInput"
       value
>

`;

exports[`FormTextInput renders with a specific width class 1`] = `

<label class="govuk-label"
       for="test-input"
>
  Test input
</label>
<span id="test-input-hint"
      class="govuk-hint"
>
  Fill me in
</span>
<input aria-describedby="test-input-hint"
       type="text"
       class="govuk-input govuk-input--width-20"
       id="test-input"
       name="testInput"
       value
>

`;
